manifests/paradoxfox/storefront.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: paradoxfox-storefront
  namespace: paradoxfox
  labels:
    app.kubernetes.io/name: paradoxfox
    app.kubernetes.io/component: storefront
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: paradoxfox
      app.kubernetes.io/component: storefront
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paradoxfox
        app.kubernetes.io/component: storefront
    spec:
      imagePullSecrets:
        - name: docker-config
      containers:
      - name: paradoxfox-storefront
        image: rg.fr-par.scw.cloud/averagemarcus-private/paradoxfox-storefront:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          name: web
---

apiVersion: v1
kind: Service
metadata:
  name: paradoxfox-storefront
  namespace: paradoxfox
  labels:
    app.kubernetes.io/name: paradoxfox
    app.kubernetes.io/component: storefront
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app.kubernetes.io/name: paradoxfox
    app.kubernetes.io/component: storefront

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paradoxfox-storefront
  namespace: paradoxfox
  labels:
    app.kubernetes.io/name: paradoxfox
    app.kubernetes.io/component: storefront
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/temporal-redirect: https://www.etsy.com/shop/paradoxfoxuk
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - paradoxfox.shop
    secretName: paradoxfox-storefront-ingress
  rules:
  - host: paradoxfox.shop
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: paradoxfox-storefront
            port:
              number: 80

---
